# neural-mastering

./: .gitignore  README.md  pyproject.toml
conf/data/: auto_eq_brown_test.yaml  auto_eq_brown_trainval.yaml  auto_eq_musdb_bass_aug_test.yaml  auto_eq_musdb_bass_aug_trainval.yaml  auto_eq_musdb_bass_test.yaml  auto_eq_musdb_bass_trainval.yaml  auto_eq_musdb_drums_aug_test.yaml  auto_eq_musdb_drums_aug_trainval.yaml  auto_eq_musdb_drums_test.yaml  auto_eq_musdb_drums_trainval.yaml  auto_eq_musdb_full_mix_aug_test.yaml  auto_eq_musdb_full_mix_aug_trainval.yaml  auto_eq_musdb_full_mix_test.yaml  auto_eq_musdb_full_mix_trainval.yaml  auto_eq_musdb_other_aug_test.yaml  auto_eq_musdb_other_aug_trainval.yaml  auto_eq_musdb_other_test.yaml  auto_eq_musdb_other_trainval.yaml  auto_eq_musdb_vocals_aug_test.yaml  auto_eq_musdb_vocals_aug_trainval.yaml  auto_eq_musdb_vocals_test.yaml  auto_eq_musdb_vocals_trainval.yaml  ssl_comp_musdb_trainval.yaml
conf/model/gb/tone_auto_eq/: model_gb_tone_auto_eq_peq.d.yaml  model_gb_tone_auto_eq_peq_musdb.d.yaml  model_gb_tone_auto_eq_spectral_mask_2048_musdb.d.yaml  model_gb_tone_auto_eq_spectral_mask_4096_musdb.d.yaml  model_gb_tone_auto_eq_spectral_mask_musdb.d.yaml  model_gb_tone_auto_eq_spectral_musdb.d.yaml
conf/model/lstm/: model_bb_lstm_ssl_comp.yaml
conf/model/tcn/: model_bb_tcn_ssl_comp.yaml
docs/: mode-collapse.md
native/clap/: CMakeLists.txt  build.sh
native/clap/bench/: README.md  baseline.json  prepare_fixture.py  run_bench.py  tone_bench.cpp
native/clap/cmake/: FetchCLAP.cmake  FetchJson.cmake  FetchOnnxRuntime.cmake  build_config.cmake.in
native/clap/src/: composite_meta.cpp  composite_meta.hpp  dimension_d.hpp  lufs_leveler.cpp  lufs_leveler.hpp  meta.cpp  meta.hpp  nablafx_plugin.cpp  ort_session.cpp  ort_session.hpp  param_id.cpp  param_id.hpp  parametric_eq_5band.hpp  rational_a.hpp  spectral_mask_eq.hpp  tone_gui.h  tone_gui.mm  tone_plugin.cpp  true_peak_ceiling.cpp  true_peak_ceiling.hpp
native/clap/template/: Info.plist.in
native/clap/tests/: test_composite_meta.cpp  test_dsp  test_dsp.cpp  test_grey_dsp.cpp
native/clap/ui/: index.html
neural_mastering/export/: __init__.py  composite.py
scripts/: build_tone_mac.sh  check_auto_eq_target_variance.py  export_tone.py  extract_class_targets.py  install_tone_mac.sh  prepare_auto_eq_data.py  probe_auto_eq_adaptivity.py  test_tone_chain.py  train_auto_eq_musdb_fanout.sh  train_auto_eq_musdb_spectral_fanout.sh
weights/auto_eq_refs/: bass.npz  drums.npz  full_mix.npz  other.npz  vocals.npz
weights/tone_bundle/: tone_meta.json
weights/tone_bundle/auto_eq_bass/: model.onnx  plugin_meta.json  source.hydra.yaml
weights/tone_bundle/auto_eq_drums/: model.onnx  plugin_meta.json  source.hydra.yaml
weights/tone_bundle/auto_eq_full_mix/: model.onnx  plugin_meta.json  source.hydra.yaml
weights/tone_bundle/auto_eq_other/: model.onnx  plugin_meta.json  source.hydra.yaml
weights/tone_bundle/auto_eq_vocals/: model.onnx  plugin_meta.json  source.hydra.yaml
weights/tone_bundle/la2a/: model.onnx  plugin_meta.json  source.hydra.yaml
weights/tone_bundle/saturator/: plugin_meta.json  source.hydra.yaml
weights/tone_bundle/ssl_comp/: model.onnx  plugin_meta.json  source.hydra.yaml
